# GryphAutoDownload

./: CMakeLists.txt  README.md  meson.build
src/: main.cpp
src/common/: common_typedefs.hpp
src/data_queue/: data_queue.cpp  data_queue.hpp
src/filedl/: filedl.cpp  filedl.hpp
src/jobs_main/: download_main.cpp  extract_main.cpp  jobs_main.hpp
src/md5calc/: md5calc.cpp  md5calc.hpp
src/zipfile/: zipfile.cpp  zipfile.hpp
